Added production Docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,11 +4,12 @@ ARG APP_PATH=/opt/$PROJECT_NAME
 ARG PYTHON_VERSION=3.10
 ARG POETRY_VERSION=1.4.2
 
+
 ##
-## STAGE: base
+## STAGE: Staging
 ##
 
-FROM python:$PYTHON_VERSION as base
+FROM python:$PYTHON_VERSION as staging
 ARG APP_NAME
 ARG APP_PATH
 ARG POETRY_VERSION
@@ -28,11 +29,12 @@ ENV PATH="$POETRY_HOME/bin:$PATH"
 WORKDIR $APP_PATH
 COPY ./poetry.lock ./pyproject.toml ./
 
+
 ##
-## STAGE: debug
+## STAGE: Development
 ##
 
-FROM base as debug
+FROM staging as development
 
 ARG APP_NAME
 ARG APP_PATH
@@ -46,4 +48,48 @@ WORKDIR $APP_PATH
 RUN poetry install --no-root
 
 ENTRYPOINT ["poetry", "run"]
-CMD python -m debugpy --listen 0.0.0.0:5678 --wait-for-client -m flask run 
+# CMD ["python", "-m debugpy", "--listen 0.0.0.0:5678", "--wait-for-client", "-m flask run"]
+CMD python -m debugpy --listen 0.0.0.0:5678 --wait-for-client -m flask run
+
+
+##
+## STAGE: Build
+##
+
+FROM staging as build
+ARG APP_PATH
+
+WORKDIR $APP_PATH
+COPY ./$APP_NAME ./$APP_NAME
+RUN poetry build --format wheel
+RUN poetry export --format requirements.txt --output constraints.txt --without-hashes
+
+
+##
+## STAGE: Production
+##
+
+FROM python:$PYTHON_VERSION as production
+ARG APP_NAME
+ARG APP_PATH
+
+ENV \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONFAULTHANDLER=1
+
+ENV \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_DEFAULT_TIMEOUT=100
+
+WORKDIR $APP_PATH
+COPY --from=build $APP_PATH/dist/*.whl ./
+COPY --from=build $APP_PATH/constraints.txt ./
+# RUN pip install ./$APP_NAME*.whl --constraint constraints.txt
+RUN pip install ./$APP_NAME*.whl 
+
+ENV PORT=8888
+ENV APP_NAME=$APP_NAME
+
+CMD gunicorn --bind :$PORT --workers 1 --threads 1 --timeout 0 "$APP_NAME:create_app()"
