--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^2.2.3"
 connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
 pytz = "^2023.3"
 timezonefinder = "^6.2.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 debugpy = "^1.6.7"
